// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions should changeCurrentTime should create changeCurrentTime action 1`] = `
Object {
  "data": 1000,
  "type": "CHANGE_CURRENT_TIME",
}
`;

exports[`actions should changeDisc should create changeDisc action 1`] = `
Object {
  "data": "233",
  "type": "CHANGE_DISC",
}
`;

exports[`actions should changeDuration should create changeDuration action 1`] = `
Object {
  "data": 1000,
  "type": "CHANGE_DURATION",
}
`;

exports[`actions should changeSoundTrack should create changeSoundTrack action 1`] = `
Object {
  "data": "233",
  "type": "CHANGE_SOUNDTRACK",
}
`;

exports[`actions should changeTitle should create changeTitle action 1`] = `
Object {
  "data": "233",
  "type": "CHANGE_TITLE",
}
`;

exports[`actions should discStartSpin should create discStartSpin action 1`] = `
Object {
  "type": "DISC_START_SPIN",
}
`;

exports[`actions should discStopSpin should create discStopSpin action 1`] = `
Object {
  "type": "DISC_STOP_SPIN",
}
`;

exports[`actions should rodOff should create rodOff action 1`] = `
Object {
  "type": "ROD_OFF",
}
`;

exports[`actions should rodOn should create rodOn action 1`] = `
Object {
  "type": "ROD_ON",
}
`;
